src/pages/home/home.scss
page-home {

    ul {
        list-style: none;
        margin-left: -40px;
    }

    li {
        padding-bottom: 5px;
    }

    .playerTracker {
        max-width: 100px!important;
        min-width: 100px!important;
      }

      .trackerGrid {
        margin-top: 33px;
      }

      #trackerTopButton {
        height: 3.2em;
      }

      .trackerButtons{
        height: 3.2em !important;
        margin-top: 8px !important;
    }

    .dealer {
        border: solid black 4px !important;
    }

    .actionOn {
        background-color: #33825e !important;
    }

    ion-icon {
        font-size: 35px;
    }

    #cancel {
        background-color: #ff6666;
    }

    #add {
        background-color: #33825e;
    }
    
    #betDisplay{
        height: 80px;
        background-color: black;
        border-radius: 10px;
        position: relative;
        overflow: hidden;
        margin-top: 16px;
    }
    .bottomDisplay{  
        height: 70px;
        margin: 2px;
        background-color: black;
        border-radius: 10px;
        position: relative;
        overflow: hidden;
    }
    #old-results{
        height: 70px;
    }

    .callRow {
        margin-right: 5px;
    }

    .middleButtons{
        height: 4.8em !important;
    }

    .topButtons{
        height: 4.5em !important;
        margin-top: 20px !important;
    }
    #potBetButton{
        margin-top: 0px !important;
    }
    .zeroRowButtons{
        margin-bottom: 0px !important;
        height: 4.8em !important;
    }

    .zeroRow {
        margin-right: 8px;
    }
    #primaryNumber{ 
        color: white;
        position: absolute;
        right: 10px;
        bottom: 10px;
        right: 10px;
        bottom: 10px;
        font-size: 25px !important;
        margin: 0px;
    }
    #topDisplayText{
        margin-top: 2px;
        color: white;
    }

    .bottomDisplayText{
        margin-top: -2px;
        color: white;
    }
    .secondaryDisplayText{
        color: grey;
        margin-top: 30px;
    }
    
    
    #secondaryNumber, #operation{
        color: white;
        display: inline-block;
        font-size: 20px !important;
        margin: 0px;
    }
    #secondLine{
        position: absolute;
        right: 10px;
        top: 10px;
    }
}

